Base Working version

--- a/IgniteServices/src/main/resources/application.properties
+++ b/IgniteServices/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8099
+server.port=8098
 spring.main.show-banner=false
 
 # db
-spring.datasource.url=jdbc:postgresql://localhost:5432/orders
+spring.datasource.url=jdbc:postgresql://localhost:5432/inbound
 spring.datasource.username=postgres
 spring.datasource.password=work
 spring.datasource.driver-class-name=org.postgresql.Driver
