Added Cloud config

--- a/IgniteServices/src/main/resources/application.properties
+++ b/IgniteServices/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8098
 spring.main.show-banner=false
 
 # db
-spring.datasource.url=jdbc:postgresql://localhost:5432/inbound
-spring.datasource.username=postgres
-spring.datasource.password=work
+spring.datasource.url=jdbc:postgresql://elmer.db.elephantsql.com:5432/dnfzdvgr
+spring.datasource.username=dnfzdvgr
+spring.datasource.password=BHCvgJ5bgheWskBxtx_rIrjaW59VbArz
 spring.datasource.driver-class-name=org.postgresql.Driver
